--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app"/>
     <title>Matt's App</title>
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="header">
       <h1>Hello, World!</h1>
     </div>
+    
   </body>
+
 </html>
