added Footer React funtion

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
     <div id="header">
       <h1>Hello, World!</h1>
     </div>
+    <div id="body">
+      <p>Main body content here</p>
+    </div>
+    <div id="footer">
+      <h1>Footer to be overwrittens</h1>
+    </div>
     
   </body>
 
