--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"/>
+    <script src="https://kit.fontawesome.com/9d8b7a1f50.js" crossorigin="anonymous"></script>
     <title>Matt's App</title>
   </head>
 
