links to team added

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"/>
     <script src="https://kit.fontawesome.com/9d8b7a1f50.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Matt's App</title>
   </head>
 
@@ -16,6 +17,15 @@
     </div>
     <div id="body">
       <p>Main body content here</p>
+    </div>
+    <div class="outer-wrapper">
+      <div class="place-card">
+        <div class="card-content">
+          <h3 style="padding-top: 20px;">Pages created by teammates:</h3>
+          <a href="https://indias-favourite-places.netlify.app/">India Abbott</a><br/>
+          <a href="https://dazzling-davinci-24b4df.netlify.app/">Emmanuel Ojo</a>
+        </div>
+      </div>
     </div>
     <div id="footer">
       <h1>Footer to be overwrittens</h1>
